@@ -3,72 +3,64 @@ package com.autowashpro.service.impl;
 import com.autowashpro.dto.request.CustomerRequest;
 import com.autowashpro.dto.response.CustomerResponse;
 import com.autowashpro.entity.Customer;
+import com.autowashpro.exception.custom.ResourceNotFoundException;
 import com.autowashpro.mapper.CustomerMapper;
 import com.autowashpro.repository.CustomerRepository;
 import com.autowashpro.service.CustomerService;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CustomerServiceImpl implements CustomerService {
 
     private final CustomerRepository customerRepository;
+    private final CustomerMapper customerMapper;
 
-    public CustomerServiceImpl(CustomerRepository customerRepository) {
+    public CustomerServiceImpl(CustomerRepository customerRepository, CustomerMapper customerMapper) {
         this.customerRepository = customerRepository;
+        this.customerMapper = customerMapper;
     }
 
     @Override
     public List<CustomerResponse> getAllCustomers() {
         return customerRepository.findAll()
                 .stream()
-                .map(CustomerMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(customerMapper::toResponse)
+                .toList();
     }
 
     @Override
     public CustomerResponse getCustomerById(Long id) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Customer not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + id));
 
-        return CustomerMapper.toResponse(customer);
+        return customerMapper.toResponse(customer);
     }
 
     @Override
     public CustomerResponse createCustomer(CustomerRequest request) {
-        Customer customer = CustomerMapper.toEntity(request);
+        Customer customer = customerMapper.toEntity(request);
         Customer savedCustomer = customerRepository.save(customer);
 
-        return CustomerMapper.toResponse(savedCustomer);
+        return customerMapper.toResponse(savedCustomer);
     }
 
     @Override
     public CustomerResponse updateCustomer(Long id, CustomerRequest request) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Customer not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + id));
 
-        customer.setFullName(request.getFullName());
-        customer.setPhone(request.getPhone());
-        customer.setEmail(request.getEmail());
-        customer.setPasswordHash(request.getPasswordHash());
-        customer.setTier(request.getTier());
-        customer.setAccumulatedPoints(request.getAccumulatedPoints());
-        customer.setTotalSpent(request.getTotalSpent());
-        customer.setTotalWashes(request.getTotalWashes());
-        customer.setUpdatedAt(LocalDateTime.now());
-
+        customerMapper.updateEntity(request, customer);
         Customer updatedCustomer = customerRepository.save(customer);
 
-        return CustomerMapper.toResponse(updatedCustomer);
+        return customerMapper.toResponse(updatedCustomer);
     }
 
     @Override
     public void deleteCustomer(Long id) {
         if (!customerRepository.existsById(id)) {
-            throw new RuntimeException("Customer not found with id: " + id);
+            throw new ResourceNotFoundException("Customer not found with id: " + id);
         }
 
         customerRepository.deleteById(id);
